# dmp-data-scraper

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  KB-数据采集-SPA接口拦截.md  README.md  START.sh  pyproject.toml  requirements.txt
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
core/: __init__.py  dmp_common.py  dmp_flow_scraper.py  dmp_item_insight_scraper.py  dmp_master.py  dmp_scraper.py  run.sh  sanity_check.py
core/config/: items.yaml  settings.py
core/tests/: conftest.py  test_anti_detect.py  test_check_dmp_session.py  test_csv_state.py  test_date_picker_selectors.py  test_dead_code_guard.py  test_dmp_common.py  test_dmp_flow_scraper.py  test_sanity_check.py  test_spa_date_match.py
core/tests/test_config/: test_settings.py
core/tests/test_utils/: test_dates.py  test_t_offset.py
core/tests/test_validators/: test_assets_validators.py  test_flow_validators.py  test_items_validators.py
core/utils/: account.py  csv_state.py  dates.py  log.py  t_offset.py
core/validators/: __init__.py  assets_validators.py  flow_validators.py  items_validators.py
docs/: SCRAPER-20-PLAN.md  SCRAPER-20-RETROSPECTIVE.md  SCRAPER-4-PLAN.md  SCRAPER-4-RETROSPECTIVE.md  SCRAPER-5-PLAN.md  SCRAPER-5-RETROSPECTIVE.md
docs/maintenance/: ARCHITECTURE.md  CHANGELOG-GUIDE.md  HOW-TO-FIX.md  LESSONS.md
scraper/core/: dmp_common.py
scraper/core/config/: __init__.py
scraper/core/tests/test_config/: test_settings.py
scraper/core/tests/test_utils/: test_t_offset.py
scraper/core/tests/test_validators/: test_items_validators.py
scraper/core/utils/: dates.py  log.py
scraper/core/validators/: assets_validators.py  items_validators.py
workflows/: README.md  dmp-daily-run.js  dmp-data-fix.js  dmp-data-sync.js  dmp-data-verify.js  dmp-monitor.js  dmp-optimization.js
