[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuqing-scraper"
version = "0.1.0"
description = "芙清 DMP 数据采集 (达摩盘自动抓数)"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",  # anti_detect.py 用 np.random.normal (高斯随机延迟)
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
]

[tool.uv]
python-preference = "only-managed"

# ── pytest 配置 ────────────────────────────────────────────────────
# testpaths 限定到 core/tests/, addopts (-ra 显示跳过原因, --strict-markers 严格 marker)
[tool.pytest.ini_options]
testpaths = ["core/tests"]
addopts = ["-ra", "--strict-markers", "--disable-warnings"]

# ── ruff 配置 ────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
exclude = ["chrome_profile/*", "del/*", ".venv/*", "__pycache__/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = [
    "E501",  # line too long (允许 long URL / 长字符串)
]

[tool.ruff.lint.per-file-ignores]
"core/dmp_master.py" = ["E402", "F541"]  # sys.path.insert + 大量 print
"core/dmp_common.py" = ["E402"]  # sys.path.insert + re-export shim
"core/dmp_scraper.py" = ["E402", "F541"]  # 同 master
"core/dmp_flow_scraper.py" = ["E402", "F541"]  # 同 master
"core/dmp_item_insight_scraper.py" = ["E402", "F541"]  # 2829 行 procedure, 大量 print
"core/sanity_check.py" = ["E402", "F541"]  # 同上
"core/run.sh" = ["E402"]
"core/tests/*.py" = ["E402"]  # conftest.py 需 sys.path.insert
"core/tests/test_*.py" = ["F841"]  # 测试变量未使用 (pytest fixture 注入)
